--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -82,6 +82,7 @@
   </nav>
 
   <ul>
+    <li>RUNTEQ</li>
     <li><strong>Rails version:</strong> <%= Rails.version %></li>
     <li><strong>Ruby version:</strong> <%= RUBY_DESCRIPTION %></li>
   </ul>
