--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
             <ul class="nav flex-column">
               <li class="nav-item">
                 <%= link_to 'トップ', root_path, class: 'nav-link active', 'aria-current': 'page' %>
+                <%= link_to 'ユーザー', users_path, class: 'nav-link active', 'aria-current': 'page' %>
               </li>
             </ul>
           </div>
